# ahkbuild

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  Cargo.toml  README.md  build.ahk  preprocess.ahk
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
Common/: utils.ahk
Lib/: utils.ahk
crates/cli/: Cargo.toml
crates/cli/src/: bundle.rs  bundle_exe.rs  config_util.rs  interpreter.rs  logging.rs  main.rs  package.rs  run.rs  scripts.rs
crates/config/: Cargo.toml
crates/config/src/: dependencies.rs  lib.rs  manifest.rs  trust.rs
crates/config/tests/: schema.rs
crates/emit/: Cargo.toml
crates/emit/src/: lib.rs  patch.rs
crates/emit/tests/: emit_ahk.rs  emit_exe.rs  fold.rs  shake_runtime.rs  userconst.rs
crates/emit_exe/: Cargo.toml
crates/emit_exe/src/: fileinstall.rs  icon.rs  lib.rs  manifest.rs  resource.rs
crates/fold/: Cargo.toml
crates/fold/src/: lib.rs  userconst.rs
crates/interpret/: Cargo.toml
crates/interpret/src/: build.rs  github.rs  lib.rs  version.rs
crates/ir/: Cargo.toml
crates/ir/src/: arena.rs  children.rs  lib.rs  lower.rs  node.rs  print.rs  program.rs
crates/ir/tests/: lower.rs
crates/ir/tests/snapshots/: lower__class_with_members.snap  lower__comments_are_lowered.snap  lower__export_default_class.snap  lower__export_global.snap  lower__import_wildcard_plus_named.snap  lower__modules_demo.snap  lower__typed_struct.snap
crates/link/: Cargo.toml
crates/link/src/: bundle.rs  include.rs  lib.rs  search.rs
crates/link/tests/: link.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/pipeline/tests/: pipeline.rs
crates/pkg/: Cargo.toml
crates/pkg/src/: farm.rs  fetch.rs  index.rs  lib.rs  list.rs  lock.rs  source.rs  store.rs  trust.rs
crates/pkg/tests/: package_tools.rs  restore.rs
crates/preprocess/: Cargo.toml
crates/preprocess/src/: continuation.rs  ignore.rs  lex.rs  lib.rs
crates/shake/: Cargo.toml
crates/shake/src/: defineprop.rs  lib.rs  members.rs  reach.rs  resolve.rs  trust.rs
crates/shake/tests/: branch.rs  shake.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
docs/: CONSTANT_FOLDING.md  EXE_BUNDLING.md  PORTING_PLAN.md  PREPROCESSING.md  TREE_SHAKING.md
preprocess/: include.ahk
site/: README.md  hugo.toml
site/content/: _index.md
site/content/docs/: _index.md  coming-from-ahk2exe.md
site/content/docs/bundling/: _index.md  constant-folding.md  directives.md  preprocessing.md  tree-shaking.md  trust.md
site/content/docs/dependencies/: _index.md
site/content/docs/exe/: _index.md  build-scripts.md  interpreters.md  manifest.md  resources.md  subsystem.md  version-info.md
site/content/docs/getting-started/: _index.md  installation.md  quickstart-exe.md
site/content/docs/internals/: _index.md  architecture.md  icon-internals.md  manifest-namespaces.md  pe-manipulation.md  preprocessing.md
site/content/docs/reference/: _index.md  cli.md  config.md
site/static/schema/: ahkbuild.schema.json
tests/: buildTester.ahk  directive.test.ahk  memberpruning.test.ahk  treeshake.test.ahk
tests/fixtures/: modules_demo.ahk
tests/fixtures/probes/: p10_bare_import.ahk  p11_bare_import_named_from.ahk  p12_bare_import_wildcard_from.ahk  p13_export_default_func.ahk  p1_module_export_block.ahk  p2_import_directive.ahk  p3_import_named.ahk  p4_import_wildcard.ahk  p5_export_global.ahk  p6_export_fatarrow.ahk  p8_import_brace_wildcard.ahk  p9_import_brace_wildcard_named.ahk
tests/fixtures/probes/runtime/: GroupA.ahk  GroupB.ahk  README.md  pa_single.ahk  pb_main.ahk  pc_main.ahk  run.ps1
