[workspace]
resolver = "3"
members = [
    "crates/syntax",
    "crates/ir",
    "crates/preprocess",
    "crates/link",
    "crates/fold",
    "crates/shake",
    "crates/emit",
    "crates/pipeline",
    "crates/cli",
    "crates/interpret",
    "crates/config",
]
exclude = ["vendor/tree-sitter-autohotkey"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
repository = "https://github.com/holy-tao/ahkbuild"

[workspace.dependencies]
# External
tree-sitter = "0.26"
tree-sitter-autohotkey = { path = "vendor/tree-sitter-autohotkey" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = "1.0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal
ahkbuild-syntax = { path = "crates/syntax" }
ahkbuild-ir = { path = "crates/ir" }
ahkbuild-preprocess = { path = "crates/preprocess" }
ahkbuild-link = { path = "crates/link" }
ahkbuild-fold = { path = "crates/fold" }
ahkbuild-shake = { path = "crates/shake" }
ahkbuild-emit = { path = "crates/emit" }
ahkbuild-pipeline = { path = "crates/pipeline" }
ahkbuild-interpret = { path = "crates/interpret" }
ahkbuild-config = { path = "crates/config" }
