[workspace]
resolver = "3"
members = [
    "crates/syntax",
    "crates/ir",
    "crates/preprocess",
    "crates/link",
    "crates/fold",
    "crates/shake",
    "crates/emit",
    "crates/emit_exe",
    "crates/pipeline",
    "crates/cli",
    "crates/interpret",
    "crates/config",
    "crates/pkg",
]
exclude = ["vendor/tree-sitter-autohotkey"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
repository = "https://github.com/holy-tao/ahkbuild"

[workspace.dependencies]
# External
tree-sitter = "0.26"
tree-sitter-autohotkey = "0.4.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = "1.0.28"
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps object key order on a `Value` round-trip, so editing `ahkbuild.json`
# (`package add`/`remove`) never reshuffles the user's file.
serde_json = { version = "1", features = ["preserve_order"] }
editpe = "0.2"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

# Internal
ahkbuild-syntax = { path = "crates/syntax" }
ahkbuild-ir = { path = "crates/ir" }
ahkbuild-preprocess = { path = "crates/preprocess" }
ahkbuild-link = { path = "crates/link" }
ahkbuild-fold = { path = "crates/fold" }
ahkbuild-shake = { path = "crates/shake" }
ahkbuild-emit = { path = "crates/emit" }
ahkbuild-emit-exe = { path = "crates/emit_exe" }
ahkbuild-pipeline = { path = "crates/pipeline" }
ahkbuild-interpret = { path = "crates/interpret" }
ahkbuild-config = { path = "crates/config" }
ahkbuild-pkg = { path = "crates/pkg" }
