[package]
name = "ahkbuild-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "ahkbuild"
path = "src/main.rs"

[dependencies]
ahkbuild-syntax.workspace = true
ahkbuild-ir.workspace = true
ahkbuild-preprocess.workspace = true
ahkbuild-link.workspace = true
ahkbuild-fold.workspace = true
ahkbuild-emit.workspace = true
ahkbuild-pipeline.workspace = true
ahkbuild-interpret.workspace = true
ahkbuild-config.workspace = true
anyhow.workspace = true
clap.workspace = true
