[package]
name = "ahkbuild-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "ahkbuild"
path = "src/main.rs"

[dependencies]
ahkbuild-syntax.workspace = true
ahkbuild-ir.workspace = true
ahkbuild-preprocess.workspace = true
ahkbuild-link.workspace = true
ahkbuild-fold.workspace = true
ahkbuild-shake.workspace = true
ahkbuild-emit.workspace = true
ahkbuild-emit-exe.workspace = true
ahkbuild-pipeline.workspace = true
ahkbuild-interpret.workspace = true
ahkbuild-config.workspace = true
ahkbuild-pkg.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
