[package]
name = "ahkbuild-emit-exe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ahkbuild-emit.workspace = true
ahkbuild-ir.workspace = true
ahkbuild-link.workspace = true
ahkbuild-fold.workspace = true
ahkbuild-shake.workspace = true
ahkbuild-config.workspace = true
anyhow.workspace = true
# editpe is used only to *read* the interpreter's version-info resource and rebuild the
# VS_VERSION_INFO bytes - never to write the PE (its resource-section rebuild corrupts the AHK
# interpreter so it can no longer execute scripts). All PE mutation goes through Win32
# UpdateResource, exactly as Ahk2Exe does.
editpe = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
ahkbuild-syntax.workspace = true
serde_json.workspace = true
tempfile = "3"
