[package]
name = "ahkbuild-link"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ahkbuild-syntax.workspace = true
ahkbuild-ir.workspace = true
ahkbuild-preprocess.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
