[package]
name = "ahkbuild-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ahkbuild-syntax.workspace = true
ahkbuild-ir.workspace = true
ahkbuild-link.workspace = true
ahkbuild-fold.workspace = true
ahkbuild-shake.workspace = true
ahkbuild-emit.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
