[package]
name = "ahkbuild-pkg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ahkbuild-config.workspace = true
ahkbuild-interpret.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
ureq = { version = "3", features = ["json"] }
zip = "8"
tar = "0.4"
flate2 = "1"
sha2 = "0.11"
rayon = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = "2"

[dev-dependencies]
tempfile = "3"
